--- a/css/css/style.css
+++ b/css/css/style.css
@@ -7,6 +7,104 @@
 
 
 
+
+/* Menú */
+header{
+     
+    text-align: right;
+    background-color: #e36414;
+    -webkit-box-shadow: 0px 2px 13px 2px rgba(0,0,0,0.64); 
+    box-shadow: 0px 2px 13px 2px rgba(0,0,0,0.64);
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    grid-template-rows: repeat(6,1fr);
+    
+    
+}
+/* carrusel principal */
+
+.slider-box-principal{
+    width: auto;
+    height: auto;
+    margin: 0px 0 0;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center; 
+    grid-column-start: 1;
+    grid-column-end: 7;
+    grid-row-start: 1;
+    grid-row-end: 7;
+    z-index: 0;
+    
+    
+}
+.slider-box-principal ul{
+    display: flex;
+    padding: 0;
+    width: 400%;
+    animation: slide 20s infinite alternate ease-in-out;
+    
+}
+.slider-box-principal li{
+    width: 100%;
+    list-style: none;
+    position: relative;
+  
+}
+.texto{
+    position: absolute;
+    text-align: center;
+    padding: 0;
+    color: white;
+    font-family: sans-serif;
+    font-size: 10em;
+    
+    
+
+}
+
+.slider-box-principal image{
+    width: 100%;
+
+}
+@keyframes slide {
+    0% { margin-left: 0; }
+    20% { margin-left: 0; }
+
+    25% { margin-left: -100%; }
+    45% { margin-left: -100%; }
+
+    50% { margin-left: -200%; }
+    70% { margin-left: -200%; }
+
+    75% { margin-left: -300%; }
+    100% { margin-left: -300%; }
+
+}
+    /* Media para celulares */
+  
+
+@media(max-width:991px) {
+    body {
+        padding: 30px;
+    }
+    .slider-box-principal {
+        width: 100%;
+    }
+    .texto{
+        top: 50px;
+        padding: 0 25px;
+    }
+    .texto h2 {
+        font-size: 35px;
+        margin-bottom: 15px;
+    }
+    .texto p{
+        font-size: 15px;
+    }
+}
+
+/* Fin del carrusel */
 /* Logo */
 #logo-img{
     width: 1em;
@@ -14,14 +112,12 @@
     display: flex;
     position: relative;
     top: 10px;
-    left: 1%;
-}
-/* Menú */
-header{
-    text-align: right;
-    background-color: #E5E5E5;
-    -webkit-box-shadow: 0px 2px 13px 2px rgba(0,0,0,0.64); 
-    box-shadow: 0px 2px 13px 2px rgba(0,0,0,0.64);
+    left: 1%;  
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    z-index: 1;
 }
 
 ul li 
@@ -31,14 +127,33 @@ ul li
     list-style-type: none;
     top: 0px;
     font-family: sans-serif;
+    font-size: 1.3em;
+    
+    
+   
+}
+
+.menu
+{
+     
+grid-column-start: 3;
+grid-column-end: 7;
+grid-row-start: 1;
+grid-row-end: 2;
+
+z-index: 1;
+
 
 }
+
 .fa-solid
 {
-    color: black;
+    color: #e36414;
+
 }
 a{
-    color: black;
+    color: #e36414;
+    
 }
 header div ul li a {
     text-decoration: none;
@@ -53,15 +168,13 @@ header div ul li a {
     /*manipulacion del texto de caja y sus imagenes*/
     font-family: sans-serif;
     text-align: right;
-    background-color: #bad4aa;
+    background-color: white;
     font-weight: 100;
     
 
 }
 
 .box-shadow img{
-    width: 20em;
-    height: 20em;
     left: 0;
     top: 0;
     
@@ -77,46 +190,64 @@ header div ul li a {
 }
 /* Titulo cabañas lago encantado */
 h1{
-    margin-top: 1%;
-    background-color: rgb(160, 156, 151);
-    color: #fdf0d5;
+    margin-top: 0%;
+    background-color: #e36414;
+    color: whitesmoke;
     text-align: center;
-    text-shadow: 2px 2px 4px rgb(10, 10, 10);
-    border-radius: 15px 0px;
-    font-family: sans-serif;
-}
-/* Fin del titulo */
-/* Seccion quienes somos */
-section{
-    width: 99%;
-    display: flex;
-    align-items: center;
-    justify-content: right;
-    position: relative;
-    margin: 1em;
+    border-radius: 0px 0px 10px 10px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     
 }
+/* Fin del titulo */
+
+/* Seccion quienes somos */
+ section{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    position: relative;
+    margin: 0.2em;
+    
+    
+    
+} 
+
 section article h2{
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
+    font-size: 2em;
+    right: 1em;
+    top: 0;
+    animation: bounce;
+    animation-duration: 3s;
   
-}
+} 
 section article img{
+
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
+    position: relative; 
     top: 2em;
-    left: 0.1em;
+    left: 0em;
     margin: 2em;
     border: 1px solid rgb(252, 56, 148);
     border-radius: 8px;
+     
+} 
+
+.box-shadow p {
+    font-size: 1.25em;
+    animation: bounce;
+    animation-duration: 3s;
 }
 p{
     z-index: 9999;
-}
+
+} 
 /* Fin de la seccion */
 
 
@@ -153,80 +284,8 @@ p{
         margin: 1%; /* Agrega espacio entre los elementos */
     }
 
-
-/* carrusel principal */
-}
-.slider-box-principal{
-    width: 1350px;
-    height: 720 px;
-    margin: 0px auto 0;
-    overflow: hidden;
-    background-size: cover;
-    background-position: center;
-    
-}
-.slider-box-principal ul{
-    display: flex;
-    padding: 0;
-    width: 400%;
-    animation: slide 20s infinite alternate ease-in-out;
-}
-.slider-box-principal li{
-    width: 100%;
-    list-style: none;
-    position: relative;
-}
-.texto{
-    position: absolute;
-    text-align: center;
-    padding: 0 250px;
-    top: 40%;
-    color: #000814;
-    font-family: sans-serif;
-    font-size: 50px;
-
 }
 
-.slider-box-principal image{
-    width: 100%;
-
-}
-@keyframes slide {
-    0% { margin-left: 0; }
-    20% { margin-left: 0; }
-
-    25% { margin-left: -100%; }
-    45% { margin-left: -100%; }
-
-    50% { margin-left: -200%; }
-    70% { margin-left: -200%; }
-
-    75% { margin-left: -300%; }
-    100% { margin-left: -300%; }
-
-}
-    /* Media para celulares */
-
-@media(max-width:991px) {
-    body {
-        padding: 30px;
-    }
-    .slider-box-principal {
-        width: 100%;
-    }
-    .texto{
-        top: 50px;
-        padding: 0 25px;
-    }
-    .texto h2 {
-        font-size: 35px;
-        margin-bottom: 15px;
-    }
-    .texto p{
-        font-size: 15px;
-    }
-}
-/* Fin del carrusel */
 
 
 /* Cabañas */
@@ -234,19 +293,111 @@ p{
 {
     text-align: center;
     font-family: sans-serif;
-    border-radius: 15px 0px;
+    border-radius: 15px 15px 15px 15px;
     color: #222;
-    background-color: #fed136;
-    font-weight: bold;
+    background-color: #e36414;
+    font-weight: bold; 
     font-size: 2em;
+    color:#fff75e;
+    animation: zoomIn;
+    animation-duration: 5s;
+    
     
 }
 .cabañasdescripcion
 {
     margin: 1em;
-    width: 70%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(12,1fr);
+    grid-template-rows: repeat(6,4fr);
+    row-gap: 2em;
+    column-gap: 1em;
+    
+}
+
+.cabaña1
+{
+    grid-column-start: 1;
+    grid-column-end: 6;
+    grid-row-start: 1;
+    grid-row-end: 4;
+    
+}
+.cabaña1 p {
+    font-family: sans-serif;
+    font-size: 1.25em;
+    border-color: black;
+    
+}
+.cabaña1 h3 {
+    font-family: sans-serif;
+    font-size: 1.5em;
+}
+#conteinerCarruselcabaña1 {
+     
+    border: 0.01px solid rgb(243, 230, 230); 
+    border-radius: 0.9em; 
+    height: 280px;
+    overflow: hidden;
+    grid-column-start: 7;
+    grid-column-end: 11;
+    grid-row-start: 1;
+    grid-row-end: 4;
+}
+.cabaña2
+{
+    grid-column-start: 1;
+    grid-column-end: 6;
+    grid-row-start: 4;
+    grid-row-end: 7;
 
 }
+.cabaña2 p {
+    font-family: sans-serif;
+    font-size: 1.25em;
+    border-color: black;
+}
+.cabaña2 h4 {
+    font-family: sans-serif;
+    font-size: 1.5em;
+}
+#conteinerCarruselcabaña2
+ { 
+    border: 0.01px solid rgb(243, 230, 230); 
+    border-radius: 0.9em; 
+    height: 280px;
+    overflow: hidden;
+    grid-column-start: 7;
+    grid-column-end: 11;
+    grid-row-start: 4;
+    grid-row-end: 7;
+}
+.itemCarrusel{
+    border: 0.01px solid rgb(247, 235, 235);
+    height:100%;
+    position: relative;
+}
+
+
+.tarjetaCarrusel{
+    height: auto;
+    width: 100%;
+    object-fit: cover;
+}
+
+.flechasCarrucel{
+    background-color: rgba(189, 173, 173,);
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+}
+
 
 
 /* Reservas */
@@ -256,9 +407,14 @@ p{
     font-family: sans-serif;
     border-radius: 15px 0px;
     color: #222;
-    background-color: #fed136;
+    background-color: #e36414;
     font-weight: bold;
     font-size: 2em;
+    color: #fff75e;
+}
+.reservas p {
+    font-family: sans-serif;
+    font-size: 1.25em;
 }
 /* Ubicacion */
 #tituloubi
@@ -267,9 +423,14 @@ p{
     font-family: sans-serif;
     border-radius: 15px 0px;
     color: #222;
-    background-color: #fed136;
+    background-color: #e36414;
     font-weight: bold;
     font-size: 2em;
+    color: #fff75e;
+}
+.ubicacion p {
+    font-family: sans-serif;
+    font-size: 1.25em;
 }
 /* Contacto */
 #titulocontacto
@@ -278,15 +439,20 @@ p{
     font-family: sans-serif;
     border-radius: 15px 0px;
     color: #222;
-    background-color: #fed136;
+    background-color: #e36414;
     font-weight: bold;
     font-size: 2em;
+    color: #fff75e;
+}
+.contacto p {
+    font-family: sans-serif;
+    font-size: 1.25em;
 }
 
 /* Footer */
 .footer
 {text-align: center;
-background-color: #E5E5E5 ;
+background-color: #e36414 ;
 }
 
 #redes {
@@ -303,8 +469,8 @@ background-color: #E5E5E5 ;
 #logo-footer{
     display: flex;
     position: relative;
-    top: 0px;
-    left: 1%;
+    left: 0%;
+
 
 }
 /* Fin del footer */
