--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,6 @@
     box-sizing: border-box;
 }
 
-
-
-
 /* Logo */
 #logo-img{
     width: 1em;
@@ -16,6 +13,7 @@
     top: 10px;
     left: 1%;
 }
+
 /* Menú */
 header{
     text-align: right;
@@ -40,13 +38,16 @@ ul li
 a{
     color: black;
 }
+
 header div ul li a {
     text-decoration: none;
     display: inline-block;
 }
 /* Fin del menú */
 
+
 /* Seccion info de nosotros */
+
 .box-shadow{
     -webkit-box-shadow: 0px 2px 13px 2px rgba(0,0,0,0.64); 
     box-shadow: 0px 2px 10px 2px rgba(0,0,0,0.64);
@@ -55,8 +56,6 @@ header div ul li a {
     text-align: right;
     background-color: #bad4aa;
     font-weight: 100;
-    
-
 }
 
 .box-shadow img{
@@ -75,6 +74,7 @@ header div ul li a {
     text-align: center;
 
 }
+
 /* Titulo cabañas lago encantado */
 h1{
     margin-top: 1%;
@@ -86,23 +86,25 @@ h1{
     font-family: sans-serif;
 }
 /* Fin del titulo */
+
 /* Seccion quienes somos */
+
 section{
     width: 99%;
     display: flex;
     align-items: center;
     justify-content: right;
     position: relative;
-    margin: 1em;
-    
+    margin: 1em;  
 }
+
 section article h2{
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
-  
+    position: relative;  
 }
+
 section article img{
     display: flex;
     align-items: center;
@@ -114,9 +116,11 @@ section article img{
     border: 1px solid rgb(252, 56, 148);
     border-radius: 8px;
 }
+
 p{
     z-index: 9999;
 }
+
 /* Fin de la seccion */
 
 
@@ -126,7 +130,6 @@ p{
     ul li {
         display: block; /* Cambia la visualización de los elementos de lista a bloque */
         text-align: center; /* Centra los elementos de la lista */
-
     }
 
     .box-shadow img {
@@ -137,6 +140,7 @@ p{
        /* Reduce el tamaño de la fuente del párrafo */
        display: none;
     }
+    
     h1{
         font-size:  .50cem;
     }
@@ -162,8 +166,7 @@ p{
     margin: 0px auto 0;
     overflow: hidden;
     background-size: cover;
-    background-position: center;
-    
+    background-position: center;   
 }
 .slider-box-principal ul{
     display: flex;
@@ -171,6 +174,7 @@ p{
     width: 400%;
     animation: slide 20s infinite alternate ease-in-out;
 }
+
 .slider-box-principal li{
     width: 100%;
     list-style: none;
@@ -184,13 +188,13 @@ p{
     color: #000814;
     font-family: sans-serif;
     font-size: 50px;
-
 }
 
 .slider-box-principal image{
     width: 100%;
 
 }
+
 @keyframes slide {
     0% { margin-left: 0; }
     20% { margin-left: 0; }
@@ -203,8 +207,8 @@ p{
 
     75% { margin-left: -300%; }
     100% { margin-left: -300%; }
-
 }
+
     /* Media para celulares */
 
 @media(max-width:991px) {
@@ -238,28 +242,62 @@ p{
     color: #222;
     background-color: #fed136;
     font-weight: bold;
-    font-size: 2em;
-    
+    font-size: 2em;  
 }
 .cabañasdescripcion
 {
     margin: 1em;
     width: 70%;
+}
 
+/* Formulario Reserva*/
+
+fieldset {
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; /* Cambio la fuente  */
+    font-size: 14px; /* Cambio el tamaño de la fuente */
+    
+    background-color: #2828e4ec;
+    color:white; /* cambio el color de la letra*/
+    border-color: rgb(2, 10, 20);/* cambio el color de los bordes del marco*/
+    
+    border-radius: 7px;/* le agrego un borde ovalado al marco*/
+    box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.8);/*le doy un sombreado difuminado*/
+    padding: 10px;
+    margin-bottom: 15px;
+  }
+   
+  form  h1{
+    text-align: center;/* centro el titulo*/ 
+    text-shadow: 2px 2px 4px #181906;
+    background-color:rgb(11, 54, 226);/*le doy color al fondo*/
+    box-shadow: 10px 10px 18px black;/*le doy un sombreado con disfuminacion*/
+    color: rgb(243, 249, 79);/*le doy color a la letra*/
+    padding: 5px 10px;
+    border-radius: 8px;/*le agrego un borde redondeado */
+    border-color: rgb(2, 10, 20);/* cambio el color de los bordes del marco*/  
+}
+
+form h2 {
+    text-shadow: 2px 2px 4px #181906; /* Ajusta esto para cambiar la sombra */
+    color: rgb(243, 249, 79);
+    font-size: 24px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
+
+/* Aplicar a todos los elementos de la tabla */
+table, th, td {
+  border-radius: 10px; /* Ajusta el radio del borde según prefieras */
+}
+
+/* Aplicar a los elementos input y label */
+input, label {
+  border-radius: 5px; /* Ajusta el radio del borde según prefieras */
 }
 
 
-/* Reservas */
-#tituloreservas
-{
-    text-align: center;
-    font-family: sans-serif;
-    border-radius: 15px 0px;
-    color: #222;
-    background-color: #fed136;
-    font-weight: bold;
-    font-size: 2em;
-}
+
+
+
 /* Ubicacion */
 #tituloubi
 {
@@ -271,6 +309,7 @@ p{
     font-weight: bold;
     font-size: 2em;
 }
+
 /* Contacto */
 #titulocontacto
 {
