--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-/* Barra de navegación menu*/
+/* Barra de navegación */
 .navbar {
     display: flex;
     align-items: center;
@@ -14,54 +14,37 @@
     padding: 10px;
 }
 
-/* Logo */
-.logo-img{
-    width: 5em;
-    border-radius: 4em;
-    display: flex;
-    position: relative;
-    top: 10px;
-    left: 1%;
+/* Logotipo */
+.logo img {
+    width: 50px; /* Ajusta el tamaño según tu logotipo */
 }
 
 /* Menú */
-
-header.menu{
-    text-align: right;
+header.menu {
+    list-style: none;
     display: flex;
     gap: 20px;
-    background-color: #E5E5E5;
-    -webkit-box-shadow: 0px 2px 13px 2px rgba(0,0,0,0.64); 
-    box-shadow: 0px 2px 13px 2px rgba(0,0,0,0.64);
 }
 
-.menu li{
+.menu li {
     margin-right: 10px;
-    display: inline-block;
-    text-decoration: none;
-    list-style-type: none;
-    top: 0px;
-    font-family: sans-serif;
-
-}
-.fa-solid
-{
-    color: black;
-}
-a{
-    color: black;
 }
 
-header.menu a {
+.menu a {
     text-decoration: none;
-    display: inline-block;
+    color: #361ccc;
+}
+
+/* Iconos */
+.material-icons {
+    font-size: 24px;
+    vertical-align: middle;
 }
 
 /* Cambio de color al posicionarse con el mouse */
 .menu li:hover a {
-    background-color: white0;
+    background-color: white;
 }
-
 /* Fin de barra navegacion menú */
 
 
